pod-security-cel/baseline/restrict-sysctls/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-sysctls
policies:
- restrict-sysctls.yaml
resources:
- ../../../pod-security/baseline/restrict-sysctls/resource.yaml
results:
- kind: CronJob
  policy: restrict-sysctls
  resources:
  - badcronjob01
  - badcronjob02
  result: fail
  rule: check-sysctls
- kind: Deployment
  policy: restrict-sysctls
  resources:
  - baddeployment01
  - baddeployment02
  result: fail
  rule: check-sysctls
- kind: Pod
  policy: restrict-sysctls
  resources:
  - badpod01
  - badpod02
  result: fail
  rule: check-sysctls
- kind: CronJob
  policy: restrict-sysctls
  resources:
  - goodcronjob01
  - goodcronjob02
  - goodcronjob03
  - goodcronjob04
  - goodcronjob05
  - goodcronjob06
  - goodcronjob07
  result: pass
  rule: check-sysctls
- kind: Deployment
  policy: restrict-sysctls
  resources:
  - gooddeployment01
  - gooddeployment02
  - gooddeployment03
  - gooddeployment04
  - gooddeployment05
  - gooddeployment06
  - gooddeployment07
  result: pass
  rule: check-sysctls
- kind: Pod
  policy: restrict-sysctls
  resources:
  - goodpod01
  - goodpod02
  - goodpod03
  - goodpod04
  - goodpod05
  - goodpod06
  - goodpod07
  result: pass
  rule: check-sysctls
